--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "dotenv": "^10.0.0",
+    "firebase": "^9.1.3",
     "git": "^0.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-scripts": "4.0.3",
     "rsuite": "^5.0.2",
     "sass": "^1.43.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js",
@@ -53,5 +56,10 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2"
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "FIREBASE_API_KEY"
+    ]
   }
 }
