--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^10.0.0",
     "firebase": "^9.1.3",
     "git": "^0.1.5",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
