--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "docx": "^7.1.2",
     "dotenv": "^10.0.0",
+    "file-saver": "^2.0.5",
     "firebase": "^9.1.3",
     "git": "^0.1.5",
     "moment": "^2.29.1",
