--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "react-dotenv && react-scripts start",
     "build": "react-dotenv && react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-dotenv && react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js",
     "format": "prettier --write src/**/*.js",
