--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "rsuite": "^5.0.2",
     "sass": "^1.43.2",
