--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,8 @@
       "react-hooks/exhaustive-deps": "warn",
       "consistent-return": "off",
       "arrow-body-style" : "off",
+      "no-await-in-loop" : "off",
+      "import/no-cycle" : "off",
       "jsx-a11y/label-has-associated-control": ["error", {
         "required": {
           "some": ["nesting", "id"]
